color picker works on dropdown

--- a/RotiniSoundwaveUX/src/app/navbar/navbar.component.html
+++ b/RotiniSoundwaveUX/src/app/navbar/navbar.component.html
@@ -60,9 +60,7 @@
           Color Picker
         </a>
         <div ngbDropdownMenu class="dropdown-menu dropdown-flush-left" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#">Action</a>
-          <a class="dropdown-item" href="#">Another action</a>
-          <a class="dropdown-item" href="#">Something else here</a>
+          <div app-color-picker></div>
         </div>
     </li>
   </ul>
