--- a/RotiniSoundwaveUX/src/app/networkaudio/networkaudio.component.html
+++ b/RotiniSoundwaveUX/src/app/networkaudio/networkaudio.component.html
@@ -25,3 +25,6 @@
     <button #startStream (click)="startAudioStream(devicedrop.value)">START AUDIO</button>
     <button #stopStream (click)="stopAudioStream()">STOP AUDIO</button>
 </div>
+<div>
+    <app-visualizercanvas></app-visualizercanvas>
+</div>
