--- a/RotiniSoundwaveUX/src/app/app.component.html
+++ b/RotiniSoundwaveUX/src/app/app.component.html
@@ -9,7 +9,7 @@
 
 <body>
 
-  <!-- <app-color-picker></app-color-picker> -->
+  <app-visualizer></app-visualizer>
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
