--- a/mei-content/rotini.css
+++ b/mei-content/rotini.css
@@ -35,6 +35,13 @@ a:hover {
   font-family: "Roboto";
   font-weight: 500;
   color: #FF69B4;
+  
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 .sidenav a:hover {
@@ -58,14 +65,14 @@ a:hover {
 .slidecontainer {
   display: none;
   opacity: 0;
-  position: relative;
+  position: absolute;
 
   z-index: 1;
   width: 300px;
   height: 10px;
 
-  top: 20px;
-  right: 300px;
+  top: 410px;
+  right: 180px;
 
   -webkit-transition: .2s;
   transition: opacity .2s;
@@ -94,4 +101,68 @@ a:hover {
 
   background: #FF69B4;
   cursor: pointer;
+}
+
+#palletescontainer {
+  position: absolute;
+  z-index: 1;
+  top: 460px;
+  right: 180px;
+  opacity: 0%;
+
+  -webkit-transition: .2s;
+  transition: opacity .2s;
+}
+
+#newpalletecontainer {
+  position: absolute;
+  z-index: 1;
+  top: 500px;
+  right: 180px;
+  opacity: 0%;
+
+  -webkit-transition: .2s;
+  transition: opacity .2s;
+}
+
+select {
+  border: 1px solid white;
+  background: none;
+  color: white;
+}
+
+option {
+  background-color: black;
+  color: white;
+}
+
+input {
+  border: 1px solid white;
+  background: none;
+  color: white;
+}
+
+.submit {
+  border: 1px solid white;
+  background: none;
+  color: white !important;
+  height: 12px !important; 
+  width: 50px;
+  padding-left: 5px !important;
+  padding-top: 2px !important;
+  padding-bottom: 2px;
+  font-size: 0.85em !important;
+}
+
+::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+  color: lightgray;
+  opacity: 1; /* Firefox */
+}
+
+:-ms-input-placeholder { /* Internet Explorer 10-11 */
+  color: lightgray;
+}
+
+::-ms-input-placeholder { /* Microsoft Edge */
+  color: lightgray;
 }
