added gear as component for html. STILL NEEDS CLICK HANDLER

--- a/RotiniSoundwaveUX/src/app/app.component.html
+++ b/RotiniSoundwaveUX/src/app/app.component.html
@@ -334,7 +334,7 @@
   <app-visualizer></app-visualizer>
 </div>
 <!-- Gear Icon -->
-<a (click)="settings_hide()"><img id="settings-gear" src="../assets/gearicon.png"></a>
+<app-gear></app-gear>
 
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * The content above * * * * * * * * * * * -->
