Got a canvas visualizer going

--- a/RotiniSoundwaveUX/src/app/app.component.html
+++ b/RotiniSoundwaveUX/src/app/app.component.html
@@ -14,7 +14,7 @@
 <!-- View Component -->
 <div class="content" role="main">
   <!--<app-networkaudio></app-networkaudio>-->
-  <app-visualizer></app-visualizer><!--<app-visualizer></app-visualizer>-->
+  <app-canvasvisualizer></app-canvasvisualizer><!--<app-visualizer></app-visualizer>-->
 </div>
 <!-- Gear Icon -->
 <app-gear (onClick)="onSidebarToggle($event)"></app-gear>
