fixed bug where sidebar was not in center of screen

--- a/RotiniSoundwaveUX/src/app/sidebar/sidebar.component.css
+++ b/RotiniSoundwaveUX/src/app/sidebar/sidebar.component.css
@@ -17,10 +17,11 @@ a:hover {
   transition: right 0.3s;
   vertical-align: top;
 
-  padding-top: 400px;
   top: 0;
   right: 0px;
-
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   z-index: 2;
   opacity: 0.5;
 }
